--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="../dist/output.css" />
-    <link rel="icon" href="./logo512.png" />
+    <link rel="icon" href="./favicon.ico" />
     <title>Admin Dashboard</title>
   </head>
   <body>
